end to end implementatio for allocation resource, tested with example tf file in staging env
