# stackpath/api/ipam/ipam_models/schemanetwork_match_expression.go
@@ -1,58 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package ipam_models
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"context"
-
-	"github.com/go-openapi/strfmt"
-	"github.com/go-openapi/swag"
-)
-
-// SchemanetworkMatchExpression An expression to match selectors against a set of values
-//
-// swagger:model schemanetworkMatchExpression
-type SchemanetworkMatchExpression struct {
-
-	// The name of the selector to perform a match against
-	Key string `json:"key,omitempty"`
-
-	// The operation to perform to match a selector
-	//
-	// Valid values are "in" with support for more possible in the future
-	Operator string `json:"operator,omitempty"`
-
-	// The values to match in the selector
-	Values []string `json:"values"`
-}
-
-// Validate validates this schemanetwork match expression
-func (m *SchemanetworkMatchExpression) Validate(formats strfmt.Registry) error {
-	return nil
-}
-
-// ContextValidate validates this schemanetwork match expression based on context it is used
-func (m *SchemanetworkMatchExpression) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (m *SchemanetworkMatchExpression) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(m)
-}
-
-// UnmarshalBinary interface implementation
-func (m *SchemanetworkMatchExpression) UnmarshalBinary(b []byte) error {
-	var res SchemanetworkMatchExpression
-	if err := swag.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*m = res
-	return nil
-}
