# stackpath/api/ipam/ipam_models/schemanetwork_metadata.go
@@ -1,204 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package ipam_models
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"context"
-
-	"github.com/go-openapi/errors"
-	"github.com/go-openapi/strfmt"
-	"github.com/go-openapi/swag"
-	"github.com/go-openapi/validate"
-)
-
-// SchemanetworkMetadata Metadata associated with an entity
-//
-// swagger:model schemanetworkMetadata
-type SchemanetworkMetadata struct {
-
-	// annotations
-	Annotations SchemanetworkStringMapEntry `json:"annotations,omitempty"`
-
-	// The date that an entity was created
-	// Format: date-time
-	CreatedAt strfmt.DateTime `json:"createdAt,omitempty"`
-
-	// The date that and entity was requested for deletion
-	// Format: date-time
-	DeleteRequestedAt strfmt.DateTime `json:"deleteRequestedAt,omitempty"`
-
-	// labels
-	Labels SchemanetworkStringMapEntry `json:"labels,omitempty"`
-
-	// The date that an entity was last updated
-	// Format: date-time
-	UpdatedAt strfmt.DateTime `json:"updatedAt,omitempty"`
-
-	// An entity's version number
-	//
-	// Versions start at 1 when they are created and increment by 1 every time they are updated.
-	Version string `json:"version,omitempty"`
-}
-
-// Validate validates this schemanetwork metadata
-func (m *SchemanetworkMetadata) Validate(formats strfmt.Registry) error {
-	var res []error
-
-	if err := m.validateAnnotations(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if err := m.validateCreatedAt(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if err := m.validateDeleteRequestedAt(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if err := m.validateLabels(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if err := m.validateUpdatedAt(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-func (m *SchemanetworkMetadata) validateAnnotations(formats strfmt.Registry) error {
-	if swag.IsZero(m.Annotations) { // not required
-		return nil
-	}
-
-	if m.Annotations != nil {
-		if err := m.Annotations.Validate(formats); err != nil {
-			if ve, ok := err.(*errors.Validation); ok {
-				return ve.ValidateName("annotations")
-			}
-			return err
-		}
-	}
-
-	return nil
-}
-
-func (m *SchemanetworkMetadata) validateCreatedAt(formats strfmt.Registry) error {
-	if swag.IsZero(m.CreatedAt) { // not required
-		return nil
-	}
-
-	if err := validate.FormatOf("createdAt", "body", "date-time", m.CreatedAt.String(), formats); err != nil {
-		return err
-	}
-
-	return nil
-}
-
-func (m *SchemanetworkMetadata) validateDeleteRequestedAt(formats strfmt.Registry) error {
-	if swag.IsZero(m.DeleteRequestedAt) { // not required
-		return nil
-	}
-
-	if err := validate.FormatOf("deleteRequestedAt", "body", "date-time", m.DeleteRequestedAt.String(), formats); err != nil {
-		return err
-	}
-
-	return nil
-}
-
-func (m *SchemanetworkMetadata) validateLabels(formats strfmt.Registry) error {
-	if swag.IsZero(m.Labels) { // not required
-		return nil
-	}
-
-	if m.Labels != nil {
-		if err := m.Labels.Validate(formats); err != nil {
-			if ve, ok := err.(*errors.Validation); ok {
-				return ve.ValidateName("labels")
-			}
-			return err
-		}
-	}
-
-	return nil
-}
-
-func (m *SchemanetworkMetadata) validateUpdatedAt(formats strfmt.Registry) error {
-	if swag.IsZero(m.UpdatedAt) { // not required
-		return nil
-	}
-
-	if err := validate.FormatOf("updatedAt", "body", "date-time", m.UpdatedAt.String(), formats); err != nil {
-		return err
-	}
-
-	return nil
-}
-
-// ContextValidate validate this schemanetwork metadata based on the context it is used
-func (m *SchemanetworkMetadata) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
-	var res []error
-
-	if err := m.contextValidateAnnotations(ctx, formats); err != nil {
-		res = append(res, err)
-	}
-
-	if err := m.contextValidateLabels(ctx, formats); err != nil {
-		res = append(res, err)
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-func (m *SchemanetworkMetadata) contextValidateAnnotations(ctx context.Context, formats strfmt.Registry) error {
-
-	if err := m.Annotations.ContextValidate(ctx, formats); err != nil {
-		if ve, ok := err.(*errors.Validation); ok {
-			return ve.ValidateName("annotations")
-		}
-		return err
-	}
-
-	return nil
-}
-
-func (m *SchemanetworkMetadata) contextValidateLabels(ctx context.Context, formats strfmt.Registry) error {
-
-	if err := m.Labels.ContextValidate(ctx, formats); err != nil {
-		if ve, ok := err.(*errors.Validation); ok {
-			return ve.ValidateName("labels")
-		}
-		return err
-	}
-
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (m *SchemanetworkMetadata) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(m)
-}
-
-// UnmarshalBinary interface implementation
-func (m *SchemanetworkMetadata) UnmarshalBinary(b []byte) error {
-	var res SchemanetworkMetadata
-	if err := swag.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*m = res
-	return nil
-}
