# stackpath/api/ipam/ipam_models/schemanetwork_string_map_entry.go
@@ -1,27 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package ipam_models
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"context"
-
-	"github.com/go-openapi/strfmt"
-)
-
-// SchemanetworkStringMapEntry A string to string key/value pair
-//
-// swagger:model schemanetworkStringMapEntry
-type SchemanetworkStringMapEntry map[string]string
-
-// Validate validates this schemanetwork string map entry
-func (m SchemanetworkStringMapEntry) Validate(formats strfmt.Registry) error {
-	return nil
-}
-
-// ContextValidate validates this schemanetwork string map entry based on context it is used
-func (m SchemanetworkStringMapEntry) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
-	return nil
-}
