# stackpath/api/ipam/ipam_models/stackpathservicenetwork_ip_family.go
@@ -1,81 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package ipam_models
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"context"
-	"encoding/json"
-
-	"github.com/go-openapi/errors"
-	"github.com/go-openapi/strfmt"
-	"github.com/go-openapi/validate"
-)
-
-// StackpathservicenetworkIPFamily supported IP families
-//
-// - UNSPECIFIED: Unknown IP family
-//   - IPv4: IPv4 IP family
-//   - IPv6: IPv6 IP family
-//
-// swagger:model stackpathservicenetworkIPFamily
-type StackpathservicenetworkIPFamily string
-
-func NewStackpathservicenetworkIPFamily(value StackpathservicenetworkIPFamily) *StackpathservicenetworkIPFamily {
-	v := value
-	return &v
-}
-
-const (
-
-	// StackpathservicenetworkIPFamilyUNSPECIFIED captures enum value "UNSPECIFIED"
-	StackpathservicenetworkIPFamilyUNSPECIFIED StackpathservicenetworkIPFamily = "UNSPECIFIED"
-
-	// StackpathservicenetworkIPFamilyIPV4 captures enum value "IPv4"
-	StackpathservicenetworkIPFamilyIPV4 StackpathservicenetworkIPFamily = "IPv4"
-
-	// StackpathservicenetworkIPFamilyIPV6 captures enum value "IPv6"
-	StackpathservicenetworkIPFamilyIPV6 StackpathservicenetworkIPFamily = "IPv6"
-)
-
-// for schema
-var stackpathservicenetworkIpFamilyEnum []interface{}
-
-func init() {
-	var res []StackpathservicenetworkIPFamily
-	if err := json.Unmarshal([]byte(`["UNSPECIFIED","IPv4","IPv6"]`), &res); err != nil {
-		panic(err)
-	}
-	for _, v := range res {
-		stackpathservicenetworkIpFamilyEnum = append(stackpathservicenetworkIpFamilyEnum, v)
-	}
-}
-
-func (m StackpathservicenetworkIPFamily) validateStackpathservicenetworkIPFamilyEnum(path, location string, value StackpathservicenetworkIPFamily) error {
-	if err := validate.EnumCase(path, location, value, stackpathservicenetworkIpFamilyEnum, true); err != nil {
-		return err
-	}
-	return nil
-}
-
-// Validate validates this stackpathservicenetwork IP family
-func (m StackpathservicenetworkIPFamily) Validate(formats strfmt.Registry) error {
-	var res []error
-
-	// value enum
-	if err := m.validateStackpathservicenetworkIPFamilyEnum("", "body", m); err != nil {
-		return err
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-// ContextValidate validates this stackpathservicenetwork IP family based on context it is used
-func (m StackpathservicenetworkIPFamily) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
-	return nil
-}
